--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-calendar": "^3.1.0",
     "react-dom": "^16.13.1",
     "react-google-calendar-api": "^1.0.11",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-typical": "^0.1.3"
   },
   "scripts": {
     "start-backend": "node src/backend/server.js",
